--- a/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
+++ b/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
@@ -14,11 +14,61 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="Deploy" Content="Deploy" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right"   Height="20" Width="75"  Click="Button_Click" Margin="0,311,79,58"/>
-        <Label Content="Build Folder:" HorizontalAlignment="Left" Margin="74,74,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,-0.154"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="170,145,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button Content="select...." HorizontalAlignment="Left" Margin="308,77,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_1" Height="23"/>
-        <Label Content="S3 bucket" HorizontalAlignment="Left" Margin="74,141,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="BuildFolderPath" HorizontalAlignment="Left" Height="23" Margin="170,78,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="Deploy" Content="Deploy" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right"   Height="20" Width="75"  Click="Button_Click" Margin="0,321,94,48"/>
+        <Label x:Name="BuildFolderLabel" Content="Build Folder:" HorizontalAlignment="Left" Margin="74,74,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,-0.154"/>
+        <TextBox x:Name="S3PathText" HorizontalAlignment="Left" Height="23" Margin="170,145,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="SelectFileButton" Content="select...." HorizontalAlignment="Left" Margin="308,77,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_1" Height="23"/>
+        <Label x:Name="S3BucketLabel" Content="S3 bucket" HorizontalAlignment="Left" Margin="74,141,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="BuildFolderPathText" HorizontalAlignment="Left" Height="23" Margin="170,78,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="628,321,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+        <Button x:Name="AdvanceButton" Content="Advance" HorizontalAlignment="Left" Margin="729,321,0,0" VerticalAlignment="Top" Width="75" Click="AdvanceButton_Click"/>
+        <Button x:Name="GoBackButton" Content="Back" HorizontalAlignment="Left" Margin="729,321,0,0" VerticalAlignment="Top" Width="75" Visibility="Hidden" Click="GoBackButton_Click"/>
+
+        <GroupBox x:Name="HttpSettingsGroup" Header="Http Settings" HorizontalAlignment="Left" Height="100" Margin="50,57,0,0" VerticalAlignment="Top" Width="379" Visibility="Hidden">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Label x:Name="CertPathLabel" Content="Certificate path" Grid.Row="0" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
+                <TextBox x:Name="CertPathText" HorizontalAlignment="Left" Grid.Row="0" Height="23" Margin="120,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <Button x:Name="CertPathButton" Content="Select..." Grid.Row="0" HorizontalAlignment="Left" Margin="280,0,0,0" VerticalAlignment="Top" Width="75"/>
+                <Label x:Name="SecretPathLabel" Content="Secrets Path" Grid.Row="1" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
+                <TextBox x:Name="SecretPathText" Grid.Row="1" HorizontalAlignment="Left" Height="23" Margin="120,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+            </Grid>
+        </GroupBox>
+
+        <GroupBox x:Name="AdSettingGroup" Header="AD Settings" HorizontalAlignment="Left" Height="180" Margin="50,150,0,0" VerticalAlignment="Top" Width="379" Visibility="Hidden">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Label x:Name="directoryIdLabel" Content="directoryId" Grid.Row="0" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
+                <TextBox x:Name="directoryIdText" HorizontalAlignment="Left" Grid.Row="0" Height="23" Margin="120,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <Label x:Name="domainSecretsArnLabel" Content="domainSecretsArn" Grid.Row="1" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
+                <TextBox x:Name="domainSecretsArnText" Grid.Row="1" HorizontalAlignment="Left" Height="23" Margin="120,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <Label x:Name="domainDNSNameLabel" Content="domainDNSName" Grid.Row="2" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
+                <TextBox x:Name="domainDNSNameText" HorizontalAlignment="Left" Grid.Row="2" Height="23" Margin="120,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <Label x:Name="domainNetBIOSNameLabel" Content="domainNetBIOSName" Grid.Row="3" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
+                <TextBox x:Name="domainNetBIOSNameText" Grid.Row="3" HorizontalAlignment="Left" Height="23" Margin="120,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <Label x:Name="servicePrincipalNameLabel" Content="servicePrincipalName" Grid.Row="4" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
+                <TextBox x:Name="servicePrincipalNameText" Grid.Row="4" HorizontalAlignment="Left" Height="23" Margin="120,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <Label x:Name="passwordRotationLabel" Content="PasswordRotation" Grid.Row="5" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="passwordRotationCheckBox" Grid.Row="5" HorizontalAlignment="Left" Margin="150,5,0,0" VerticalAlignment="Top"/>
+            </Grid>
+        </GroupBox>
     </Grid>
 </ui:DialogWindow>
