--- a/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
+++ b/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
@@ -6,18 +6,42 @@
              xmlns:ui="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
              xmlns:local="clr-namespace:PortingAssistantVSExtensionClient.Dialogs"
              mc:Ignorable="d" 
-             d:DesignHeight="420" d:DesignWidth="1000" Height="420" Width="1000">
-    <Grid Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="1000">
+             d:DesignHeight="450" d:DesignWidth="800" Height="450" Width="800">
+    <Grid Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="800" Background="#FFF0F0F0">
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="180"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        <Rectangle x:Name="GeneralSettingsFrame" Fill="#FFE5E5E5"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,20,0,0" Stroke="White" VerticalAlignment="Top"/>
+        <Label Content="General settings"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top" FontSize="14"/>
+        <Rectangle x:Name="DirectoryServiceFrame" Fill="#FFF0F0F0"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,60,0,0" Stroke="White" VerticalAlignment="Top"/>
+        <Label Content="Directory Service"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" FontSize="14"/>
+        <Rectangle x:Name="AdvancedSettingsFrame" Fill="#FFF0F0F0"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,100,0,0" Stroke="White" VerticalAlignment="Top"/>
+        <Label Content="Advanced Settings"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" FontSize="14"/>
+        <Rectangle x:Name="LicenseAgreementFrame" Fill="#FFF0F0F0"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,140,0,0" Stroke="White" VerticalAlignment="Top"/>
+        <Label Content="License Agreement"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,140,0,0" VerticalAlignment="Top" FontSize="14"/>
         <Button x:Name="Deploy" Content="Deploy" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75"  Click="Button_Click" Margin="830,321,0,0"/>
-        <Label x:Name="BuildFolderLabel" Content="Build Folder:" HorizontalAlignment="Left" Margin="74,74,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,-0.154"/>
-        <Button x:Name="SelectFileButton" Content="select...." HorizontalAlignment="Left" Margin="308,77,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_1" Height="23"/>
-        <TextBox x:Name="BuildFolderPathText" HorizontalAlignment="Left" Height="23" Margin="170,78,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Grid x:Name="GeneralSettingGrid" Visibility="Visible" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+
+            </Grid.RowDefinitions>
+            <Label Content="AWS Profile"  Grid.Row="0"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14"/>
+            <ComboBox  Grid.Row="0" Margin="25,50,0,0"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"/>
+            <Label Content="Deployment Name"  Grid.Row="1"  HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top" FontSize="14"/>
+            <TextBox Grid.Row="1" Height="25" Margin="25,50,0,0" TextWrapping="Wrap" Text=".Net Test deploy" HorizontalAlignment="Left" VerticalAlignment="Top" Width="180" FontSize="14" Opacity="0.8"/>
+            <Label Content="Specify local file directory *"  Grid.Row="2"  HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top" FontSize="14"/>
+            <Button x:Name="BrowseLocalFolderButton" Content="Browse...." Grid.Row="2" HorizontalAlignment="Left" Margin="220,50,0,0" VerticalAlignment="Top" Width="100" Click="Browse_Folder_Click" Height="23"/>
+            <TextBox x:Name="LocalFolderPathText" Text="C:\" Grid.Row="2" Height="25" Margin="25,50,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top" Width="180" FontSize="14" Opacity="0.8"/>
+        </Grid>
+
         <Button Content="Cancel" HorizontalAlignment="Left" Margin="628,321,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
         <Button x:Name="AdvanceButton" Content="Advance" HorizontalAlignment="Left" Margin="729,321,0,0" VerticalAlignment="Top" Width="75" Click="AdvanceButton_Click"/>
         <Button x:Name="GoBackButton" Content="Back" HorizontalAlignment="Left" Margin="729,321,0,0" VerticalAlignment="Top" Width="75" Visibility="Hidden" Click="GoBackButton_Click"/>
@@ -50,5 +74,6 @@
                 <CheckBox x:Name="passwordRotationCheckBox" Grid.Row="5" HorizontalAlignment="Left" Margin="150,5,0,0" VerticalAlignment="Top"/>
             </Grid>
         </GroupBox>
+        
     </Grid>
 </ui:DialogWindow>
