--- a/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
+++ b/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
@@ -21,29 +21,28 @@
         <Label Content="Directory service"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" FontSize="14" MouseLeftButtonDown="DirectoryServiceFrame_MouseDown" Cursor="Hand"/>
         <Rectangle x:Name="AdvancedSettingsFrame" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,100,0,0" VerticalAlignment="Top"/>
         <Label Content="Advanced settings"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" FontSize="14" MouseLeftButtonDown="AdvancedSettingsFrame_MouseDown" Cursor="Hand"/>
-        <Rectangle x:Name="LicenseAgreementFrame" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,140,0,0" VerticalAlignment="Top"/>
-        <Label Content="License agreement"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,140,0,0" VerticalAlignment="Top" FontSize="14" MouseLeftButtonDown="LicenseAgreementFrame_MouseDown" Cursor="Hand"/>
-        
         <Grid x:Name="GeneralSettingGrid" Visibility="Visible" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <Label Content="AWS Profile"  Grid.Row="0"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-            <ComboBox  Grid.Row="0" Margin="25,50,0,0"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"/>
-            <Label Content="Deployment Name"  Grid.Row="1"  HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top"/>
-            <TextBox x:Name="DeploymentName" Grid.Row="1" Height="25" Margin="25,50,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"  Opacity="0.8"/>
-            <Label Content="Specify local file directory *"  Grid.Row="2"  HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top" />
-            <Button x:Name="BrowseLocalFolderButton" Content="Browse...." Grid.Row="2" HorizontalAlignment="Left" Margin="220,50,0,0" VerticalAlignment="Top" Width="100" Click="Browse_Folder_Click" Height="23"/>
-            <TextBox x:Name="LocalFolderPathText" Text="C:\" Grid.Row="2" Height="25" Margin="25,50,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"  Opacity="0.8"/>
-            <GroupBox Header="Notice - Manual Configuration" Grid.Row="3" Height="100" Margin="20,0,30,0" HorizontalAlignment="Stretch" VerticalAlignment="Top" >
+            <Label Content="AWS Profile"  Grid.Row="0"  Margin="20,10,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" />
+            <ComboBox x:Name="AwsProfileComboBox"  Grid.Row="0" Margin="25,35,0,0"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"/>
+            <Label Content="AWS Region"  Grid.Row="1"  Margin="20,10,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" />
+            <ComboBox x:Name="AwsRegionComboBox"  Grid.Row="1" Margin="25,35,0,0"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"/>
+            <Label Content="Deployment Project"  Grid.Row="2"  HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top"/>
+            <ComboBox x:Name="DeploymentProjectComboBox"  Grid.Row="2" Margin="25,25,0,0"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"/>
+            <Label Content="Deployment Name"  Grid.Row="3"  HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top"/>
+            <TextBox x:Name="DeploymentNameTextBox" Grid.Row="3" Height="25" Margin="25,25,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"  Opacity="0.8"/>
+            <GroupBox Header="Notice - Manual Configuration" Grid.Row="4" Height="100" Margin="20,0,30,0" HorizontalAlignment="Stretch" VerticalAlignment="Top" >
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,0,0,0" TextWrapping="Wrap" Text="Advanced configuration (virtual private cloud, subdomain, database, etc) may be managed by directly editing the JSON file. (placeholder copy)" />
             </GroupBox>
-            <Button Content="Next" Grid.Row="4" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_1"/>
-            <Button Content="Back" Grid.Row="4" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Button Content="Next" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_1"/>
+            <Button Content="Back" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
         </Grid>
 
         <Grid x:Name="DirectoryServicesGrid" Visibility="Hidden" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
@@ -63,15 +62,16 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Label  Grid.Row="0" Content="Active directory ID" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" />
+                <Label  Grid.Row="0" Content="Active directory Name" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" />
                 <Label  Grid.Row="0" Content="Chose the active directory your application uses" HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top" />
-                <ComboBox Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,45,0,0"  Width="180"/>
-                <Label  Grid.Row="1" Content="Domain name" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" />
-                <TextBox x:Name="DomainName" Grid.Row="1" Height="23" Margin="25,25,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="250"  />
+                <ComboBox x:Name="ADNameBox" Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,45,0,0"  Width="250" SelectionChanged="ADNameBox_SelectionChanged"/>
+                <Label  Grid.Row="1" Content="Directory ID" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" />
+                <TextBox x:Name="ADIdBox" Grid.Row="1" Height="23" Margin="25,25,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="250"  IsReadOnly="True"/>
                 <Label  Grid.Row="2" Content="Secrets Manager ARN that has AD username and password" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" />
-                <TextBox x:Name="SecretArn" Grid.Row="2" Height="23" Margin="25,25,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="250"  />
+                <ComboBox x:Name="SecretArnBox" Grid.Row="2"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,25,0,0"  Width="250"/>
+                
                 <Label  Grid.Row="3" Content="Service Principal Name (only keytab files are needed for now) " HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" />
-                <TextBox x:Name="SecretPrincipal" Grid.Row="3" Height="23" Margin="25,25,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="250"  />
+                <TextBox x:Name="SecretPrincipalBox" Grid.Row="3" Height="23" Margin="25,25,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="250"  />
             </Grid>
             
             <Button Content="Next" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_2"/>
@@ -81,24 +81,21 @@
         <Grid x:Name="AdvancedSettingsGrid" Visibility="Hidden" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="60"/>
-            </Grid.RowDefinitions>
-            <Label Content="Advanced settings"  Grid.Row="0"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-            <Label Content="Virtual Private Cloud (VPC) "  Grid.Row="0"  Margin="20,50,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" />
-            <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,80,20,0" TextWrapping="Wrap" Text="Test deployment .............." />
-            <Button Content="Next" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_3"/>
-            <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Back_Button_Click_3"/>
-        </Grid>
-
-        <Grid x:Name="LicenseAgreementGrid" Visibility="Hidden" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
-            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <Label Content="EULA"  Grid.Row="0"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-            <Button Content="Deploy" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80"/>
-            <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Back_Button_Click_4"/>
+            <Label Content="Virtual Private Cloud (VPC) ID"  Grid.Row="0"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+            <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,50,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
+            <ComboBox x:Name="VpcBox" Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,100,0,0"  Width="250" SelectionChanged="VpcBox_SelectionChanged"/>
+            <TextBlock Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,10,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
+            <Label Content="VPC subnets"  Grid.Row="1"  Margin="20,50,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" />
+            <ComboBox x:Name="VpcSubnetsBox" Grid.Row="1"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,75,0,0"  Width="250"/>
+            <Label Content="Manual configuration with JSON editing"  Grid.Row="2"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+            <TextBlock Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
+            <Button Content="Deploy" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_3"/>
+            <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Back_Button_Click_3"/>
         </Grid>
-        
+
     </Grid>
 </ui:DialogWindow>
